@@ -131,24 +131,13 @@ Info: The listed binary packages all share the same extended description.
  particularly for users who aren't familiar with Debian's package naming
  conventions.
 
-Tag: missing-comma-after-substvar
-Severity: normal
-Certainty: possible
-Info: The given field in the <tt>debian/control</tt> file has a substvar
- (something of the form <tt>${Variable}</tt>) that isn't followed by a
- comma.  This is normally a lurking bug.  As long as the variable isn't
- defined or expands to an empty string, the generated control file will be
- syntactically valid, but as soon as the variable has a non-empty value,
- the control file will have a syntax error.  You probably meant to put a
- comma after the substvar expansion.
-
 Tag: missing-separator-between-items
 Severity: important
 Certainty: certain
 Info: The given field in the <tt>debian/control</tt> file contains a list
- of items separated by commas and pipes.  It appears that when wrapping
- the list on multiple lines, a separator was missed at the end of a line.
- This can lead to bogus or incomplete dependencies, conflicts etc.
+ of items separated by commas and pipes.  It appears a separator was
+ missed between two items.  This can lead to bogus or incomplete
+ dependencies, conflicts etc.
 
 Tag: package-depends-on-hardcoded-libc
 Severity: normal
