@@ -43,6 +43,11 @@ Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, foo
   bar (>= 1), baz
   (<< 2),
   fizz (= 2.0)
+Suggests: p1
+ p2
+ p3
+ p4
+ p5
 Description: {$description} (three)
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
